<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="score_a" translatable="false">0</string>
    <string name="a_3_points">+3 Points</string>
    <string name="a_2_points">+2 Points</string>
    <string name="a_free_throw">Free Throw</string>
    <string name="team_b">Team B</string>
    <string name="score_b" translatable="false">0</string>
    <string name="b_3_points">+3 Points</string>
    <string name="b_2_points">+2 Points</string>
    <string name="b_free_throw">Free Throw</string>
    <string name="reset">Reset</string>
</resources>
